--- a/06Lecture/package.json
+++ b/06Lecture/package.json
@@ -6,11 +6,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "ejs": "^3.1.10",
     "express": "^5.1.0"
   }
 }
